--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="close_drawer">Close Drawer</string>
     <string name="logout">Logout</string>
     <string name="navigation">Navigation</string>
+    <string name="cafe_kopi_legend">CAFE KOPI LEGEND</string>
+    <string name="address">Jl. Pagar Alam No.102, Segala Mider, Kec. Tj.\nKarang Bar., Kota Bandar Lampung,\nLampung 35132</string>
 </resources>
