--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="navigation">Navigation</string>
     <string name="cafe_kopi_legend">CAFE KOPI LEGEND</string>
     <string name="address">Jl. Pagar Alam No.102, Segala Mider, Kec. Tj.\nKarang Bar., Kota Bandar Lampung,\nLampung 35132</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
