--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="home">Home</string>
     <string name="welcome">Welcome,</string>
     <string name="items">Items</string>
+    <string name="menu_details">Menu Details</string>
     <string name="find_us">Find Us</string>
     <string name="open_drawer">Open Drawer</string>
     <string name="close_drawer">Close Drawer</string>
